@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST xmpp4r-0.3.2.gem 134144 RMD160 2d492e065d75937ba92b87e3ca32149abc1300b9 SHA1 db566182163a0bc2f629a19f062266d10d218f33 SHA256 bf17fa93cfe4279186e836ab5b9809e20a33890f57f2c7f48a26ab76cd6eea6e
-DIST xmpp4r-0.4.gem 163328 RMD160 f6b3af643c97ba2efee4b0d610dc126d837524fa SHA1 1d29fcb3ab3edf4f16becef8309b3ffe995134be SHA256 830dd4372fe41bcd2e54cc47c07f355ab7acc6314c5336fcc1a5fc05b1a12d36
 DIST xmpp4r-0.5.gem 175616 RMD160 d7b5fa02766a046c76636fc2b0afbb466a36c4eb SHA1 fe99e679af6a658148a53663fb3a3fe89a102feb SHA256 dfbdbfb45cd4dc4ffc00639d39ac387a7dcc6888d9f2a75dfefbd500213a4a4f
-EBUILD xmpp4r-0.3.2.ebuild 766 RMD160 e09634530e7a77f676126c426624bf8440346329 SHA1 e2f57c0b581bf6ecb7e99f863a04c91e7bf82434 SHA256 a0f0e9fc5b7d29094a6553caabe899174d023f1336fef432f150b6affc7b74e1
-EBUILD xmpp4r-0.4.ebuild 728 RMD160 e0012bd479aade4f81a882e30d08f366f9c12c85 SHA1 262a374d853f48c17e5651af1dea09ce6ef1baaa SHA256 e13fedcc2bb9596d6b2e58ea2514a500c7bb339b7a91e96049f24f32a6027712
 EBUILD xmpp4r-0.5.ebuild 726 RMD160 6e40588eee9363385264972b8b4a9658de1baf6e SHA1 67cf7b43fe07cefa61fb1ae666e507c5d3148834 SHA256 362b01efca2fabd26227b80ae48263c4fdc4ecf4199b26be8faa2444560bf0a2
-MISC ChangeLog 2593 RMD160 ef2799de3ec2a8ad72e53eaf9fc45023a1e42979 SHA1 9f78c2a94cb95c3a6a8bc8723fd75e041ce6c90d SHA256 2e4413c3dbce2a8a7e4aa1cb5d29aba051a01642c610cd87b95b01ee0d1ee332
+MISC ChangeLog 2711 RMD160 c7cde2d0ace6646a477aaddc41c4755ccc4e50d1 SHA1 b1e9c39afec359f56f91f59ba4e4b17981c9eb9a SHA256 ec7b831f891357805e3ce2b4c83cf73f7276c79b8a2f1743ae1c5f83643d0b56
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkq41h0ACgkQkKaRLQcq0GJmpwCfU5HrOtBGbOLe7dw5wE9bzkod
-FSwAnRS4S5RP5RXlozXO6laSMzo9harM
-=5izv
+iEYEARECAAYFAkq6ZE4ACgkQVYU2Ai8K93dKtQCgyzfkv1lyoipLusZsIi6ttpwS
+sWMAn1qShSOjHExazpFpLsRs9PsduzAz
+=+TES
 -----END PGP SIGNATURE-----
