@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/xmpp4r
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/xmpp4r/ChangeLog,v 1.13 2009/09/22 13:49:36 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/xmpp4r/ChangeLog,v 1.14 2009/09/23 18:09:05 graaff Exp $
+
+  23 Sep 2009; Hans de Graaff <graaff@gentoo.org> -xmpp4r-0.3.2.ebuild,
+  -xmpp4r-0.4.ebuild:
+  Remove old versions.
 
   22 Sep 2009; Markus Meier <maekke@gentoo.org> xmpp4r-0.5.ebuild:
   x86 stable, bug #282722
